WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288777
[Site Isolation] Remote page is sometimes not injected in to FrameProcess
https://bugs.webkit.org/show_bug.cgi?id=288777
Summary
[Site Isolation] Remote page is sometimes not injected in to FrameProcess
Ben Nham
Reported
2025-02-27 16:17:49 PST
In BrowsingContextGroup::addFrameProcessAndInjectPageContextIf, if the site associated with the frame process matches an existing site for any pages in the browsing context group, then we bail out of the function. This can leave us in a state where the FrameProcess does not have a RemotePage associated with every page in the BCG.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-27 16:18:01 PST
<
rdar://problem/145796987
>
Ben Nham
Comment 2
2025-02-27 16:19:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41573
EWS
Comment 3
2025-03-01 11:25:15 PST
Committed
291453@main
(4b256c9d1797): <
https://commits.webkit.org/291453@main
> Reviewed commits have been landed. Closing PR #41573 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug